1. add passTraining API 2. 民工->劳工 3. search for card and incident Page 4. forbid normal user to delete worker and incident.

--- a/server/src/main/resources/static/index.html
+++ b/server/src/main/resources/static/index.html
@@ -1,4 +1,4 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><title>民工信息管理系统</title><base href="/"><link rel="icon" type="image/x-icon" href="favicon.ico"><style type="text/css">body,
+<!doctype html><html lang="en"><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><title>成都地铁施工安全管理系统</title><base href="/"><link rel="icon" type="image/x-icon" href="favicon.ico"><style type="text/css">body,
     html {
       height: 100%;
     }
@@ -58,4 +58,4 @@
         stroke-dasharray: 89, 200;
         stroke-dashoffset: -124px;
       }
-    }</style><link href="styles.e74a918f4b954fd07b66.bundle.css" rel="stylesheet"/></head><body><app-root><div class="app-loading"><!-- <img src="/assets/img/logo.png" width="124" height="" alt=""> --><div class="logo"></div><svg class="spinner" viewBox="25 25 50 50"><circle class="path" cx="50" cy="50" r="20" fill="none" stroke-width="2" stroke-miterlimit="10"/></svg></div></app-root><script type="text/javascript" src="inline.b0ad0472f8412faef3ee.bundle.js"></script><script type="text/javascript" src="polyfills.796d6544e2381b3525cb.bundle.js"></script><script type="text/javascript" src="scripts.825b7a45416ec49ccf8d.bundle.js"></script><script type="text/javascript" src="main.50267d19d5a0c974a2e6.bundle.js"></script></body></html>
+    }</style><link href="styles.e74a918f4b954fd07b66.bundle.css" rel="stylesheet"/></head><body><app-root><div class="app-loading"><!-- <img src="/assets/img/logo.png" width="124" height="" alt=""> --><div class="logo"></div><svg class="spinner" viewBox="25 25 50 50"><circle class="path" cx="50" cy="50" r="20" fill="none" stroke-width="2" stroke-miterlimit="10"/></svg></div></app-root><script type="text/javascript" src="inline.2a2b84a4a24c0b1444c9.bundle.js"></script><script type="text/javascript" src="polyfills.796d6544e2381b3525cb.bundle.js"></script><script type="text/javascript" src="scripts.825b7a45416ec49ccf8d.bundle.js"></script><script type="text/javascript" src="main.5250c5051960e1fcd7a5.bundle.js"></script></body></html>
